--- a/latexVersion/presentation.tex
+++ b/latexVersion/presentation.tex
@@ -41,6 +41,11 @@
 %\usepackage{biblatex}
 %\bibliography{literature.bib}
 
+%%% GIFS %%%
+%\usepackage{movie15}
+%\usepackage{graphicx}
+\usepackage{multimedia}
+
 
 \input{setup-colors.tex}
 \input{setup-beamer.tex}
