--- a/latexVersion/example-content.tex
+++ b/latexVersion/example-content.tex
@@ -96,15 +96,67 @@
 		{J}_1 &\rightarrow \textrm{Learn to avoid circular region} \\
 		{J}_2 &\rightarrow \textrm{Learn to go to some point}
 	\end{align*}
-	<ADD ``ANIMATION">
+	\begin{minipage}{\textwidth}
+		\centering		
+		\includegraphics[width=0.5\linewidth]{a1g1}
+	\end{minipage}%
 \end{frame}
+
+\begin{frame}{Sometimes they are compatible}
+	\begin{align*}
+		{J}_1 &\rightarrow \textrm{Learn to avoid circular region} \\
+		{J}_2 &\rightarrow \textrm{Learn to go to some point}
+	\end{align*}
+	\begin{minipage}{\textwidth}
+		\centering		
+		\includegraphics[width=0.5\linewidth]{a1g2}
+	\end{minipage}%
+\end{frame}
+
+
+\begin{frame}{Sometimes they are compatible}
+	\begin{align*}
+		{J}_1 &\rightarrow \textrm{Learn to avoid circular region} \\
+		{J}_2 &\rightarrow \textrm{Learn to go to some point}
+	\end{align*}
+	\begin{minipage}{\textwidth}
+		\centering		
+		\includegraphics[width=0.5\linewidth]{a1g3}
+	\end{minipage}%
+\end{frame}
+
+\begin{frame}{Sometimes they are compatible}
+	\begin{align*}
+		{J}_1 &\rightarrow \textrm{Learn to avoid circular region} \\
+		{J}_2 &\rightarrow \textrm{Learn to go to some point}
+	\end{align*}
+	\begin{minipage}{\textwidth}
+		\centering		
+		\includegraphics[width=0.5\linewidth]{a1g4}
+	\end{minipage}%
+\end{frame}
+
+\begin{frame}{Sometimes they are compatible}
+	\begin{align*}
+		{J}_1 &\rightarrow \textrm{Learn to avoid circular region} \\
+		{J}_2 &\rightarrow \textrm{Learn to go to some point}
+	\end{align*}
+	\begin{minipage}{\textwidth}
+		\centering		
+		\includegraphics[width=0.5\linewidth]{a1g5}
+	\end{minipage}%
+\end{frame}
+
 
 \begin{frame}{Sometimes they are compatible}
 	\begin{align*}
 		{J}_1 &\rightarrow \textrm{Learn to form a triangle} \\
 		{J}_2 &\rightarrow \textrm{Learn to send one robot to a point}
 	\end{align*}
-	<ADD ``ANIMATION">
+	\begin{minipage}{\textwidth}
+		\centering		
+		\includegraphics[width=0.5\linewidth]{triangleExample}
+	\end{minipage}%
 \end{frame}
 
 \begin{frame}{Sometimes they are NOT compatible}
@@ -112,7 +164,10 @@
 		{J}_1 &\rightarrow \textrm{Learn to avoid square-shaped region} \\
 		{J}_2 &\rightarrow \textrm{Learn to go to a point}
 	\end{align*}
-	<ADD ``ANIMATION">
+	\begin{minipage}{\textwidth}
+		\centering		
+		\includegraphics[width=0.3\linewidth]{questionMark}
+	\end{minipage}%
 \end{frame}
 
 \begin{frame}{Sometimes they are NOT compatible}
@@ -174,14 +229,6 @@ If we train a new cost-to-go function, ${J}_{N + 1}$ to be independent to ${J}_1
 ${J}_{N + 1}$ is orthogonal to each of ${J}_1, \ldots, {J}_N$ at $x \in \mathcal{X}$.\\ 
 $\Leftrightarrow$\\ 
 the optimal input is $- \frac{1}{2} L_g {J}_{N + 1} (x)^{\top}$.
-\end{frame}
-
-\begin{frame}{Now they ARE compatible.}
-	\begin{align*}
-		{J}_1 &\rightarrow \textrm{Learn to avoid square-shaped region} \\
-		{J}_2 &\rightarrow \textrm{Learn to go to a point}
-	\end{align*}
-	<ADD ``ANIMATION">
 \end{frame}
 
 \begin{frame}{Now they ARE compatible.}
