--- a/latexVersion/presentation.tex
+++ b/latexVersion/presentation.tex
@@ -41,10 +41,6 @@
 %\usepackage{biblatex}
 %\bibliography{literature.bib}
 
-%%% GIFS %%%
-%\usepackage{movie15}
-%\usepackage{graphicx}
-\usepackage{multimedia}
 
 
 \input{setup-colors.tex}
@@ -53,7 +49,10 @@
 \input{setup-plots.tex}
 
 
-\title{Value Iteration for Learning Concurrently Executable Robotic Control Tasks}
+\title{
+\includegraphics[height=0.2\textheight]{uw_logo.png}
+\includegraphics[height=0.2\textheight]{erablab_logo_full.png} \\
+Value Iteration for Learning Concurrently Executable Robotic Control Tasks}
 \author{Sheikh A. Tahmid and Gennaro Notomista}
 \institute[]{%
 	Department of Electrical and Computer Engineering, University of Waterloo, Canada
@@ -61,7 +60,9 @@
 \date{24th International Conference on Autonomous Agents and Multiagent Systems}
 
 
-\titlegraphic{\includegraphics[height=.17\textheight]{uw_logo.png}}
+%\titlegraphic{\includegraphics[height=.17\textheight]{uw_logo.png}}
+%\includegraphics[height=0.17\textheight]{erablab_logo_full.png}
+
 
 
 \begin{document}
